# simple-ai-agent-sandbox

./: .envrc.example  .gitignore  AGENTS.md  DESIGN_DECISIONS.md  README.md  main.py  pyproject.toml
agent/: __init__.py  cli.py  config.py  utils.py
agent/container/: __init__.py  manager.py
agent/graph/: graph.py  nodes.py  state.py
agent/guardrails/: __init__.py  base.py  deletion.py
agent/skills/: base.py  bash_skill.py
skills/bash/: skill.md
tests/eval/: test_agent_eval.py
